<resources>
    <string name="app_name">CalculationTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_message">Calculate Test</string>
    <string name="title_image_info">title image</string>
    <string name="title_button_message">Enter</string>
    <string name="high_score_message">High Score:%d</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonClear">C</string>
    <string name="buttonSubmit">OK</string>
    <string name="equal">=</string>
    <string name="question_mark">\?</string>
    <string name="current_score">Score:%d</string>
    <string name="input_indicator">Your Answer:</string>
    <string name="lose_image_message">lose image</string>
    <string name="win_image_message">win image</string>
    <string name="lose_message">You Lose!</string>
    <string name="win_message">You Win!</string>
    <string name="lose_score_message">You Score:%d</string>
    <string name="win_score_message">New Record:%d</string>
    <string name="button_back_to_title">Back</string>
    <string name="answer_correct_message">Currect!GO ON</string>
    <string name="quit_dialog_title">确定退出?</string>
    <string name="ok_quit_dialog_title">好</string>
    <string name="no_quit_dialog_title">取消</string>
</resources>